--- a/CorteCaja/CorteCaja/CorteCaja.csproj
+++ b/CorteCaja/CorteCaja/CorteCaja.csproj
@@ -210,6 +210,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Img\148_img_1.jpg" />
+    <Content Include="Content\Img\Logo.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
